stDemoOne/force-app/main/default/objects/FundingAwardRequirement/FundingAwardRequirement.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>