stDemoOne/force-app/main/default/objects/FundingAwardRequirement/fields/gps_progress_summary__c.field-meta.xml
<CustomField>
    <fullName>gps_progress_summary__c</fullName>
    <label>Progress Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>