stDemoOne/force-app/main/default/objects/FundingAwardRequirement/fields/gps_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>gps_Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>Slight Delay</fullName>
            </value>
            <value>
                <fullName>Significant Delay</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>