stDemoOne/force-app/main/default/objects/FundingAwardRequirement/fields/gps_Reason_for_Delay_and_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>gps_Reason_for_Delay_and_Mitigation_Plan__c</fullName>
    <label>Reason for Delay and Mitigation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>