stDemoOne/force-app/main/default/objects/FundingAwardRequirement/fields/gps_reportEnd__c.field-meta.xml
<CustomField>
    <fullName>gps_reportEnd__c</fullName>
    <label>Reporting End Date</label>
    <type>Date</type>
</CustomField>