stDemoOne/force-app/main/default/objects/FundingAwardRequirement/fields/gps_reportStart__c.field-meta.xml
<CustomField>
    <fullName>gps_reportStart__c</fullName>
    <label>Reporting Start Date</label>
    <type>Date</type>
</CustomField>