stDemoOne/force-app/main/default/objects/FundingAwardRequirement/listViews/All_FundingAwardRequirements.listView-meta.xml
<ListView>
    <fullName>All_FundingAwardRequirements</fullName>
    <columns>Name</columns>
    <columns>DueDate</columns>
    <columns>FundingAward</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Funding Award Requirements</label>
</ListView>